shared-core-rs/bindings/swift/hyperwhisper_coreFFI.h

// ⚠️ Attention: If you change this #else block (ending in `#endif // def UNIFFI_SHARED_H`) you *must* ⚠️
// ⚠️ increment the version suffix in all instances of UNIFFI_SHARED_HEADER_V4 in this file.           ⚠️

typedef struct RustBuffer
{
    uint64_t capacity;
    uint64_t len;
    uint8_t *_Nullable data;
} RustBuffer;
typedef struct ForeignBytes
{
    int32_t len;
    const uint8_t *_Nullable data;
} ForeignBytes;
// Error definitions
typedef struct RustCallStatus {
    int8_t code;
    RustBuffer errorBuf;
} RustCallStatus;
typedef void (*UniffiRustFutureContinuationCallback)(uint64_t, int8_t
    );
RustBuffer uniffi_hyperwhisper_core_fn_func_phonetic_encode(RustBuffer word, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_hyperwhisper_core_fn_func_preset_from_raw(RustBuffer raw, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_hyperwhisper_core_fn_func_process_voice_commands(RustBuffer text, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_hyperwhisper_core_fn_func_remove_filler_words(RustBuffer text, RustBuffer language, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_hyperwhisper_core_fn_func_remove_trailing_period(RustBuffer text, RustCallStatus *_Nonnull out_status
);
uint32_t uniffi_hyperwhisper_core_fn_func_retry_max_attempts(RustCallStatus *_Nonnull out_status
    
);
uint64_t uniffi_hyperwhisper_core_fn_func_retry_max_retry_after_secs(RustCallStatus *_Nonnull out_status
    
);
RustBuffer uniffi_hyperwhisper_core_fn_func_sanitize_streaming_buffer(RustBuffer buffer, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_hyperwhisper_core_fn_func_sanitize_vocabulary_word(RustBuffer word, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_hyperwhisper_core_fn_func_soniox_build_create_request(RustBuffer params, RustBuffer file_id, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_hyperwhisper_core_fn_func_soniox_build_delete_file_request(RustBuffer params, RustBuffer file_id, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_hyperwhisper_core_fn_func_soniox_build_delete_transcription_request(RustBuffer params, RustBuffer transcription_id, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_hyperwhisper_core_fn_func_soniox_build_status_request(RustBuffer params, RustBuffer transcription_id, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_hyperwhisper_core_fn_func_soniox_build_transcript_request(RustBuffer params, RustBuffer transcription_id, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_hyperwhisper_core_fn_func_soniox_build_upload_request(RustBuffer params, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_hyperwhisper_core_fn_func_soniox_parse_create_response(RustBuffer resp, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_hyperwhisper_core_fn_func_soniox_parse_status_response(RustBuffer resp, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_hyperwhisper_core_fn_func_soniox_parse_transcript_response(RustBuffer resp, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_hyperwhisper_core_fn_func_soniox_parse_upload_response(RustBuffer resp, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_hyperwhisper_core_fn_func_strip_wrapper_markers(RustBuffer text, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_hyperwhisper_core_fn_func_universal_settings_to_macos_settings_json(RustBuffer record_json, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_hyperwhisper_core_fn_func_validate_backup_json(RustBuffer json, RustCallStatus *_Nonnull out_status
);
RustBuffer ffi_hyperwhisper_core_rustbuffer_alloc(uint64_t size, RustCallStatus *_Nonnull out_status
);
RustBuffer ffi_hyperwhisper_core_rustbuffer_from_bytes(ForeignBytes bytes, RustCallStatus *_Nonnull out_status
);
void ffi_hyperwhisper_core_rustbuffer_free(RustBuffer buf, RustCallStatus *_Nonnull out_status
);
RustBuffer ffi_hyperwhisper_core_rustbuffer_reserve(RustBuffer buf, uint64_t additional, RustCallStatus *_Nonnull out_status
);
void ffi_hyperwhisper_core_rust_future_poll_u8(uint64_t handle, UniffiRustFutureContinuationCallback _Nonnull callback, uint64_t callback_data
);
void ffi_hyperwhisper_core_rust_future_cancel_u8(uint64_t handle
);
void ffi_hyperwhisper_core_rust_future_free_u8(uint64_t handle
);
uint8_t ffi_hyperwhisper_core_rust_future_complete_u8(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void ffi_hyperwhisper_core_rust_future_poll_i8(uint64_t handle, UniffiRustFutureContinuationCallback _Nonnull callback, uint64_t callback_data
);
void ffi_hyperwhisper_core_rust_future_cancel_i8(uint64_t handle
);
void ffi_hyperwhisper_core_rust_future_free_i8(uint64_t handle
);
int8_t ffi_hyperwhisper_core_rust_future_complete_i8(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void ffi_hyperwhisper_core_rust_future_poll_u16(uint64_t handle, UniffiRustFutureContinuationCallback _Nonnull callback, uint64_t callback_data
);
void ffi_hyperwhisper_core_rust_future_cancel_u16(uint64_t handle
);
void ffi_hyperwhisper_core_rust_future_free_u16(uint64_t handle
);
uint16_t ffi_hyperwhisper_core_rust_future_complete_u16(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void ffi_hyperwhisper_core_rust_future_poll_i16(uint64_t handle, UniffiRustFutureContinuationCallback _Nonnull callback, uint64_t callback_data
);
void ffi_hyperwhisper_core_rust_future_cancel_i16(uint64_t handle
);
void ffi_hyperwhisper_core_rust_future_free_i16(uint64_t handle
);
int16_t ffi_hyperwhisper_core_rust_future_complete_i16(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void ffi_hyperwhisper_core_rust_future_poll_u32(uint64_t handle, UniffiRustFutureContinuationCallback _Nonnull callback, uint64_t callback_data
);
void ffi_hyperwhisper_core_rust_future_cancel_u32(uint64_t handle
);
void ffi_hyperwhisper_core_rust_future_free_u32(uint64_t handle
);
uint32_t ffi_hyperwhisper_core_rust_future_complete_u32(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void ffi_hyperwhisper_core_rust_future_poll_i32(uint64_t handle, UniffiRustFutureContinuationCallback _Nonnull callback, uint64_t callback_data
);
void ffi_hyperwhisper_core_rust_future_cancel_i32(uint64_t handle
);
void ffi_hyperwhisper_core_rust_future_free_i32(uint64_t handle
);
int32_t ffi_hyperwhisper_core_rust_future_complete_i32(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void ffi_hyperwhisper_core_rust_future_poll_u64(uint64_t handle, UniffiRustFutureContinuationCallback _Nonnull callback, uint64_t callback_data
);
void ffi_hyperwhisper_core_rust_future_cancel_u64(uint64_t handle
);
void ffi_hyperwhisper_core_rust_future_free_u64(uint64_t handle
);
uint64_t ffi_hyperwhisper_core_rust_future_complete_u64(uint64_t handle, RustCallStatus *_Nonnull out_status
);