shared-core-rs/bindings/csharp/hyperwhisper_core.cs


    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern RustBuffer uniffi_hyperwhisper_core_fn_func_phonetic_encode(RustBuffer @word,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern RustBuffer uniffi_hyperwhisper_core_fn_func_preset_from_raw(RustBuffer @raw,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern RustBuffer uniffi_hyperwhisper_core_fn_func_process_voice_commands(RustBuffer @text,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern RustBuffer uniffi_hyperwhisper_core_fn_func_remove_filler_words(RustBuffer @text,RustBuffer @language,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern RustBuffer uniffi_hyperwhisper_core_fn_func_remove_trailing_period(RustBuffer @text,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern uint uniffi_hyperwhisper_core_fn_func_retry_max_attempts(ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern ulong uniffi_hyperwhisper_core_fn_func_retry_max_retry_after_secs(ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern RustBuffer uniffi_hyperwhisper_core_fn_func_sanitize_streaming_buffer(RustBuffer @buffer,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern RustBuffer uniffi_hyperwhisper_core_fn_func_sanitize_vocabulary_word(RustBuffer @word,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern RustBuffer uniffi_hyperwhisper_core_fn_func_soniox_build_create_request(RustBuffer @params,RustBuffer @fileId,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern RustBuffer uniffi_hyperwhisper_core_fn_func_soniox_build_delete_file_request(RustBuffer @params,RustBuffer @fileId,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern RustBuffer uniffi_hyperwhisper_core_fn_func_soniox_build_delete_transcription_request(RustBuffer @params,RustBuffer @transcriptionId,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern RustBuffer uniffi_hyperwhisper_core_fn_func_soniox_build_status_request(RustBuffer @params,RustBuffer @transcriptionId,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern RustBuffer uniffi_hyperwhisper_core_fn_func_soniox_build_transcript_request(RustBuffer @params,RustBuffer @transcriptionId,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern RustBuffer uniffi_hyperwhisper_core_fn_func_soniox_build_upload_request(RustBuffer @params,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern RustBuffer uniffi_hyperwhisper_core_fn_func_soniox_parse_create_response(RustBuffer @resp,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern RustBuffer uniffi_hyperwhisper_core_fn_func_soniox_parse_status_response(RustBuffer @resp,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern RustBuffer uniffi_hyperwhisper_core_fn_func_soniox_parse_transcript_response(RustBuffer @resp,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern RustBuffer uniffi_hyperwhisper_core_fn_func_soniox_parse_upload_response(RustBuffer @resp,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern RustBuffer uniffi_hyperwhisper_core_fn_func_strip_wrapper_markers(RustBuffer @text,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern RustBuffer uniffi_hyperwhisper_core_fn_func_universal_settings_to_macos_settings_json(RustBuffer @recordJson,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern RustBuffer uniffi_hyperwhisper_core_fn_func_validate_backup_json(RustBuffer @json,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern RustBuffer ffi_hyperwhisper_core_rustbuffer_alloc(ulong @size,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern RustBuffer ffi_hyperwhisper_core_rustbuffer_from_bytes(ForeignBytes @bytes,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern void ffi_hyperwhisper_core_rustbuffer_free(RustBuffer @buf,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern RustBuffer ffi_hyperwhisper_core_rustbuffer_reserve(RustBuffer @buf,ulong @additional,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern void ffi_hyperwhisper_core_rust_future_poll_u8(IntPtr @handle,IntPtr @callback,IntPtr @callbackData
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern void ffi_hyperwhisper_core_rust_future_cancel_u8(IntPtr @handle
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern void ffi_hyperwhisper_core_rust_future_free_u8(IntPtr @handle
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern byte ffi_hyperwhisper_core_rust_future_complete_u8(IntPtr @handle,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern void ffi_hyperwhisper_core_rust_future_poll_i8(IntPtr @handle,IntPtr @callback,IntPtr @callbackData
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern void ffi_hyperwhisper_core_rust_future_cancel_i8(IntPtr @handle
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern void ffi_hyperwhisper_core_rust_future_free_i8(IntPtr @handle
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern sbyte ffi_hyperwhisper_core_rust_future_complete_i8(IntPtr @handle,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern void ffi_hyperwhisper_core_rust_future_poll_u16(IntPtr @handle,IntPtr @callback,IntPtr @callbackData
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern void ffi_hyperwhisper_core_rust_future_cancel_u16(IntPtr @handle
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern void ffi_hyperwhisper_core_rust_future_free_u16(IntPtr @handle
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort ffi_hyperwhisper_core_rust_future_complete_u16(IntPtr @handle,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern void ffi_hyperwhisper_core_rust_future_poll_i16(IntPtr @handle,IntPtr @callback,IntPtr @callbackData
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern void ffi_hyperwhisper_core_rust_future_cancel_i16(IntPtr @handle
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern void ffi_hyperwhisper_core_rust_future_free_i16(IntPtr @handle
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern short ffi_hyperwhisper_core_rust_future_complete_i16(IntPtr @handle,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern void ffi_hyperwhisper_core_rust_future_poll_u32(IntPtr @handle,IntPtr @callback,IntPtr @callbackData
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern void ffi_hyperwhisper_core_rust_future_cancel_u32(IntPtr @handle
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern void ffi_hyperwhisper_core_rust_future_free_u32(IntPtr @handle
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern uint ffi_hyperwhisper_core_rust_future_complete_u32(IntPtr @handle,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern void ffi_hyperwhisper_core_rust_future_poll_i32(IntPtr @handle,IntPtr @callback,IntPtr @callbackData
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern void ffi_hyperwhisper_core_rust_future_cancel_i32(IntPtr @handle
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern void ffi_hyperwhisper_core_rust_future_free_i32(IntPtr @handle
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern int ffi_hyperwhisper_core_rust_future_complete_i32(IntPtr @handle,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern void ffi_hyperwhisper_core_rust_future_poll_u64(IntPtr @handle,IntPtr @callback,IntPtr @callbackData
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern void ffi_hyperwhisper_core_rust_future_cancel_u64(IntPtr @handle
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern void ffi_hyperwhisper_core_rust_future_free_u64(IntPtr @handle
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern ulong ffi_hyperwhisper_core_rust_future_complete_u64(IntPtr @handle,ref UniffiRustCallStatus _uniffi_out_err
    );
